--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <input type="text" placeholder="Ask with respect…" />
         <button>Send</button>
       </div>
+
+      <div class="ai-mascot" aria-hidden="true">
+        <img src="upscalemedia-transformed (1).png" alt="Ganga Bhumi AI Mascot">
+      </div>
     </section>
 
 
@@ -51,6 +55,7 @@
 
   <script src="particles.js"></script>
   <script src="chat.js"></script>
+   <script src="mascot.js"></script>
 </body>
 
 </html>
